Refactor savings round-up logic
Updated transaction retrieval and savings goal management to streamline code and improve maintenance. Introduced Amount class to handle currency operations, and utilized Java's Locale and Currency features for formatting. Adjusted SavingsGoalService to receive Account and SavingGoal objects, enhancing readability and reducing error potential. Ran integration tests to ensure functionality remains intact post-refactor.